Login functionality working

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ div {
 .nav {
   display: flex;
   justify-content: space-between;
-  background-color: #E9EDC9;
+  background-color: #21302D;
 
 }
 
