Minor styling to the Authorization Page.

--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -14,3 +14,9 @@
     cursor: pointer;
   }
   
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #21302D;
+  
+  }
