--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,9 +1,9 @@
 div {
-    /* border: 1px solid grey; */
-    margin: 5px;
-    padding: 5px;
-  }
-  
+  /* border: 1px solid grey; */
+  /* margin: 5px; */
+  /* padding: 5px; */
+}
+
   .nav {
     display: flex;
     justify-content: space-between;
