--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,3 +1,16 @@
-.nav{
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     padding: 10px;
 }
+
+.left{
+    display: flex;
+  }
+  
+  .right{
+    display: flex;
+    justify-content: flex-end;
+    
+  }
