--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,8 +1,8 @@
-div {
+/* div { */
   /* border: 1px solid grey; */
   /* margin: 5px; */
   /* padding: 5px; */
-}
+/* } */
 
   .nav {
     display: flex;
