--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -115,7 +115,7 @@ input[type=password]{
     display: flex;
     flex-direction: column;
 }
-.Submit{
+.submit{
     justify-content: center;
     align-items: center;
     background-color: #D4A373;
