--- a/src/components/UserLogOut/UserLogOut.css
+++ b/src/components/UserLogOut/UserLogOut.css
@@ -5,8 +5,8 @@
     border-radius: 20px;
     border: 0;
     color: #242424;
-    width: 7vw;
+    width: 8vw;
     height: 50px;
-    padding-left: 10px;
+    padding: 10px;
     margin: 10px;
 }
