--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -15,3 +15,10 @@
     justify-content: flex-end;
     
   }
+
+  .info{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
