--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,3 +1,15 @@
-div{
+.Avatar{
+    color: white;
     background-color: white;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+
+}
+
+.Avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
 }
