--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -11,3 +11,17 @@
 .Feed{
     margin-top: 0;
 }
+
+.interesttags{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+.inpsoimages{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
