--- a/src/components/UserLogOut/UserLogOut.css
+++ b/src/components/UserLogOut/UserLogOut.css
@@ -5,6 +5,7 @@
     border-radius: 20px;
     border: 0;
     color: #242424;
+    min-width: 100px;
     width: 8vw;
     height: 50px;
     padding: 10px;
