--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -4,10 +4,11 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
+    height: 500px;
 }
 
 .logo-white {
-    margin-top: 300px;
+    margin-top: 100px;
     margin-bottom: 10px;
 }
 
