--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-position: 50% 35%;
     width: 100%;
-    height: 500px;
+    height: 50%;
 }
 
 .Feed{
