--- a/src/components/Socket/Socket.css
+++ b/src/components/Socket/Socket.css
@@ -1,9 +1,9 @@
-.App {
+/* .App {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
+} */
 
 .chatbox {
   border: solid 1px black;
