--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,8 +1,9 @@
 .pagetitle{
     color: white;
     font-size: 60px;
-    margin-top: 20px;
-    position: relative;
-    top: 30%;
+display: flex;
+align-items: center;
+height: 10vh;
+margin-top: 10%
 }
 
