--- a/src/components/SubNav/SubNav.css
+++ b/src/components/SubNav/SubNav.css
@@ -16,7 +16,11 @@
 }
 
 .subnav{
-    position: relative;
-    top: 25%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    top: 40%;
     gap:50px;
+    width: 100%;
+    height: 30px;
 }
