--- a/src/components/SubNav/SubNav.css
+++ b/src/components/SubNav/SubNav.css
@@ -19,8 +19,8 @@
     position: absolute;
     justify-content: center;
     align-items: center;
-    top: 40%;
+    top: 20%;
     gap:50px;
     width: 100%;
-    height: 30px;
+    height: px;
 }
