--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,16 @@
     transform: rotate(360deg);
   }
 }
+
+.header {
+  display: flex;
+  justify-content: center;
+  background-size: 100% auto;
+  background-size: cover;
+  z-index: -2;
+  background-repeat: no-repeat;
+  background-position: 50% 35%;
+  width: 100%;
+  height: 500px;
+}
+
