--- a/src/components/FileUpload/FileUpload.css
+++ b/src/components/FileUpload/FileUpload.css
@@ -1,14 +1,20 @@
+.addpost{
+  display: flex;
+  flex-direction: column;
+}
 .upload-container {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
   background-color: white;
-  min-width: 30em;
-  max-width: 40em;
-  min-height: 20em;
-  max-height: 30em;
-  border: 2px dashed black;
+  margin-top: 20px;
   text-align: center;
+  padding: 20px;
+  border: 2px dashed black;
 }
 
-.post-btn {
+/* .post-btn {
   background-color: rgb(230, 0, 35);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -20,11 +26,9 @@
   border-radius: 24px;
   min-width: 100px;
   width: 300px;
-}
+} */
 
 .description-box {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
   height: 40px;
   border-radius: 5px;
@@ -36,4 +40,22 @@
   font-size: 20px;
   font-weight: 700;
   padding: 10px;
+}
+
+.post-btn {
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  background-color: #d4a373;
+  border-radius: 20px;
+  border: 0;
+  color: #242424;
+  width: 18vw;
+  max-width: 300px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+span {
+  margin-left: 10px;
 }
