--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
+    background-color: #21302D;
 }
 
 .left{
@@ -22,3 +23,23 @@
     justify-content: center;
     align-items: center;
   }
+
+  .icon{
+  color: rgb(0, 0, 0);
+  background-color: #CCD5AE;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 20px;
+  display: flex;
+  }
+
+  /* span {
+    margin-top: 20px;
+    width: 200%;
+    height: 100%;
+    object-fit: contain;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+  } */
