--- a/src/components/Socket/Socket.css
+++ b/src/components/Socket/Socket.css
@@ -1,6 +1,38 @@
 .chatbox {
-  border: solid 1px black;
-  height: 66vh;
-  width: 80vw;
+  justify-content: center;
+  border: solid 1px #D9D9D9;
+  height: 50%;
+  width: 60vw;
   border-radius: 5px;
+  margin: auto;
+  margin-top: 20px;
+  text-align: right;
+  
+}
+ .Chat{
+  display:fle;
+  justify-content: center;
+ }
+
+ li{
+  margin: 20px;
+ }
+
+
+ .submit{
+ justify-content: center;
+ align-items: center;
+ background-color: #D4A373;
+ border-radius: 20px;
+ border: 0;
+ color: #242424;
+ width: 130px;
+ height: 30px;
+ padding-left: 10px;
+ margin: 10px;
+}
+
+li
+{
+    list-style-type: none;
 }
