--- a/src/components/SubNav/SubNav.css
+++ b/src/components/SubNav/SubNav.css
@@ -1,11 +1,12 @@
 .mainnav{
-    justify-content: center;
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #ffffff;
     border-radius: 20px;
     border: 0;
     color: #242424;
-    width: 15vw;
+    width: 150px;
     max-width: 150px;
     padding: 10px;
     margin: 10px;
@@ -15,8 +16,13 @@
     background-color: #CCD5AE
 }
 
+.mainnav:focus{
+    background-color: #CCD5AE
+}
+
 .subnav{
     position: absolute;
+    display: flex;
     justify-content: center;
     align-items: center;
     top: 20%;
@@ -24,3 +30,5 @@
     width: 100%;
     height: px;
 }
+
+  
