--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,12 @@
   }
 }
 
+.bannerheader {
+  background-size: 100% auto;
+  background-size: cover;
+  z-index: -2;
+  background-repeat: no-repeat;
+  background-position: 50% 35%;
+  width: 100%;
+  height: 50vh;
+}
