--- a/src/components/CreatePost/CreatePost.css
+++ b/src/components/CreatePost/CreatePost.css
@@ -26,6 +26,15 @@
     margin: 10px;
 }
 
+input[type=file]{
+  color: #242424;
+  width: 250px;
+  height: 30px;
+  padding-left: 10px;
+  margin: 10px;
+  
+}
+
 .uploadform {
     display: flex;
     flex-direction: column;
@@ -40,6 +49,7 @@
   align-items: right;
   text-align: center;
   margin-top: 20px;
+
 }
 
 .addpostlabel{
